@@ -869,6 +869,9 @@ Release 2.3.0 - UNRELEASED
     HDFS-5399. Revisit SafeModeException and corresponding retry policies.
     (Jing Zhao via todd)
 
+    HDFS-5876. SecureDataNodeStarter does not pick up configuration in 
+    hdfs-site.xml. (Haohui Mai via jing9)
+
   BREAKDOWN OF HDFS-2832 SUBTASKS AND RELATED JIRAS
 
     HDFS-4985. Add storage type to the protocol and expose it in block report
